--- a/amplify.yml
+++ b/amplify.yml
@@ -1,16 +1,15 @@
 version: 1
 frontend:
-    phases:
-      pre-build: 
-          commands: 
-              - npm install
-      build:
-          commands:
-              - npm run build
-    artifacts:
-          baseDirectory: build
-          files:
-              - '**/*'
-    cache:
-          paths:
-              - node_modules/**/*
+  phases:  
+    build:
+      commands:
+        - npm install
+        - npm install -g react-scripts
+        - npm run build
+  artifacts:
+    baseDirectory: build
+    files:
+        - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
