--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
+    "@aws-amplify/cli": "^12.10.1",
+    "axios": "^1.6.7",
     "jquery": "^3.6.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
