feat: prettier configuration + env variables build

--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "personalportfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@aws-amplify/cli": "^12.10.1",
-    "aws-amplify": "^6.0.13",
-    "axios": "^1.6.7",
-    "jquery": "^3.6.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-ga": "^2.3.5",
-    "react-scripts": "^5.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "personalportfolio",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@aws-amplify/cli": "^12.10.1",
+        "aws-amplify": "^6.0.13",
+        "axios": "^1.6.7",
+        "jquery": "^3.6.0",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-ga": "^2.3.5",
+        "react-scripts": "^5.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "prettier": "3.2.5"
+    }
 }
