--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,43 +1,40 @@
 {
-  "api": {
-    "curriculumData": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "category": "function",
-          "resourceName": "curriculumData"
+    "api": {
+        "curriculumData": {
+            "dependsOn": [
+                {
+                    "attributes": ["Name", "Arn"],
+                    "category": "function",
+                    "resourceName": "curriculumData"
+                }
+            ],
+            "providerPlugin": "awscloudformation",
+            "service": "API Gateway"
         }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "API Gateway"
-    }
-  },
-  "function": {
-    "curriculumData": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_curriculumData_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "curriculumData"
-        }
-      ]
     },
-    "AMPLIFY_function_curriculumData_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "curriculumData"
+    "function": {
+        "curriculumData": {
+            "build": true,
+            "providerPlugin": "awscloudformation",
+            "service": "Lambda"
         }
-      ]
+    },
+    "parameters": {
+        "AMPLIFY_function_curriculumData_deploymentBucketName": {
+            "usedBy": [
+                {
+                    "category": "function",
+                    "resourceName": "curriculumData"
+                }
+            ]
+        },
+        "AMPLIFY_function_curriculumData_s3Key": {
+            "usedBy": [
+                {
+                    "category": "function",
+                    "resourceName": "curriculumData"
+                }
+            ]
+        }
     }
-  }
 }
